Added css to the page and added Breakfast @ Tiffany's

--- a/index.html
+++ b/index.html
@@ -1,8 +1,29 @@
 <html>
   <header>
-    HELLO!
+    <link rel="stylesheet" type="text/css" href="css/app.css">
   </header>
   <body>
-    Welcome to RobertMitola.com!
+	<h1>
+		Welcome to RobertMitola.com!
+	</h1>
+	<h2>
+		Robert Mitola's JS free portfolio space!
+	</h2>
+	<div>
+		Hey there! Welcome to my portfolio space. Check out all my creative works below; including games, movies, and music!
+		Also, please enjoy my non-offensive background color and superior monospaced font. Who needs JS when you have Courier New?
+		Enjoy this site on any sized screen! You don't need React and ten thousand dependencies if you just K.I.S.S.! My portfolio
+		space follows the Unix philosophy: Do one thing and do it well!
+	</div>
+	<h2>
+		My Movies
+	</h2>
+	<div>
+		<h3>
+			Breakfast @ Tiffany's
+		</h3>
+		<iframe width="560" height="315" src="https://www.youtube.com/embed/euAgypI0-7I" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen>
+		</iframe>
+	</div>
   </body>
 </html>
