Added profile picture

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<h2>
 		Robert Mitola's JS free portfolio space!
 	</h2>
+	<img class="profilePicture" src="images/profile.png" />
 	<div>
 		Hey there! Welcome to my portfolio space. Check out all my creative works below; including games, movies, and music!
 		Also, please enjoy my non-offensive background color and superior monospaced font. Who needs JS when you have Courier New?
