Resized profile picture

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <header>
-    <link rel="stylesheet" type="text/css" href="css/app.css">
+	<link rel="stylesheet" type="text/css" href="css/app.css">
   </header>
   <body>
 	<h1>
@@ -10,7 +10,7 @@
 		Robert Mitola's JS free portfolio space!
 	</h2>
 	<img class="profilePicture" src="images/profile.png" />
-	<div>
+	<div class="description">
 		Hey there! Welcome to my portfolio space. Check out all my creative works below; including games, movies, and music!
 		Also, please enjoy my non-offensive background color and superior monospaced font. Who needs JS when you have Courier New?
 		Enjoy this site on any sized screen! You don't need React and ten thousand dependencies if you just K.I.S.S.! My portfolio
@@ -19,7 +19,7 @@
 	<h2>
 		My Movies
 	</h2>
-	<div>
+	<div class="description">
 		<h3>
 			Breakfast @ Tiffany's
 		</h3>
