Added a link to the github repo

--- a/index.html
+++ b/index.html
@@ -26,5 +26,8 @@
 		<iframe width="560" height="315" src="https://www.youtube.com/embed/euAgypI0-7I" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen>
 		</iframe>
 	</div>
+	<div class="description">
+		Check out my website's source code on <a href="https://github.com/robert-mitola/robert-mitola.github.com" target="_blank">Github</a>, where it's being hosted as a static site!
+	</div>
   </body>
 </html>
